src/main/java/com/example/redditclone/error/SubredditNotFoundException.java
package com.example.redditclone.error;

public class SubredditNotFoundException extends Exception {
    public SubredditNotFoundException(String message) {
        super(message);
    }
}
